--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🥩 Les Conseils du Boucher - Menu Sur-Mesure</title>
+    <title> Les Conseils du Boucher - Menu Sur-Mesure</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/metscarnes/bimi-metscarnes/main/Logo%20Mets%20Carn%C3%A9s%20HD.png">
 
     <script src="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.js.iife.js"></script>
@@ -19,21 +19,69 @@
     body { font-family: 'Playpen Sans', sans-serif; background: var(--dark); color: var(--text-light); overflow-x: hidden; min-height: 100vh; position: relative; }
     body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)' opacity='0.03'/%3E%3C/svg%3E"); pointer-events: none; z-index: 1; opacity: 0.6; }
     h1, .welcome-title, .question-title, .meal-day-title, .result-day h3, #modal-title, .planning-table th, .meat-filter-section h3, .driver-popover-title { font-family: 'Loyola Pro Bold', serif; }
-    .driver-overlay { background: rgba(4, 5, 8, 0.20); }
-    .driver-popover { background: var(--dark-secondary); border-radius: 0; box-shadow: 0 30px 90px rgba(0, 0, 0, 0.9), 0 0 1px 1px rgba(237, 193, 150, 0.15); border: 1px solid var(--accent); max-width: 440px; animation: elegantFadeIn 0.5s cubic-bezier(0.16, 1, 0.3, 1); }
-    @keyframes elegantFadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-    .driver-popover-title { font-size: 1.3rem; color: var(--primary); font-weight: 700; letter-spacing: 1px; text-transform: uppercase; }
-    .driver-popover-description { font-family: 'Playpen Sans', sans-serif; font-size: 1rem; line-height: 1.8; color: var(--text-light); }
-    .driver-popover-footer { display: flex; gap: 0.75rem; justify-content: flex-end; border-top: 1px solid var(--border-subtle); padding-top: 1.2rem; margin-top: 1.2rem; }
-    .driver-popover-progress-text { color: var(--text-secondary); font-size: 0.9rem; }
-    .driver-popover-prev-btn, .driver-popover-next-btn, .driver-popover-close-btn { padding: 0.7rem 1.5rem; border-radius: 0; font-weight: 600; border: none; cursor: pointer; transition: all 0.3s ease; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 0.5px; }
-    .driver-popover-next-btn { background: var(--accent); color: var(--dark); box-shadow: 0 4px 15px rgba(204, 137, 86, 0.4); }
-    .driver-popover-next-btn:hover { background: var(--primary); transform: translateY(-2px); box-shadow: 0 6px 20px rgba(237, 193, 150, 0.5); }
-    .driver-popover-prev-btn { background: transparent; color: var(--text-light); border: 1px solid var(--accent); }
-    .driver-popover-prev-btn:hover { background: rgba(237, 193, 150, 0.1); border-color: var(--primary); }
-    .driver-popover-close-btn { background: transparent; color: var(--text-light); opacity: 0.8; }
-    .driver-popover-close-btn:hover { opacity: 1; color: var(--primary); }
-    .welcome-screen { position: fixed; top: 0; left: 0; width: 100%; min-height: 100vh; background: linear-gradient(135deg, var(--dark) 0%, #0a0a0c 50%, var(--dark-secondary) 100%); display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 9999; transition: opacity 1.2s ease, transform 1.2s ease; overflow: hidden; padding: 4rem 0; }
+   /* =====================================================
+   TUTORIEL DRIVER.JS
+   ===================================================== */
+.driver-overlay { background: rgba(4, 5, 8, 0.20); }
+.driver-popover { background: var(--dark-secondary); border-radius: 0; box-shadow: 0 30px 90px rgba(0, 0, 0, 0.9), 0 0 1px 1px rgba(237, 193, 150, 0.15); border: 1px solid var(--accent); max-width: 440px; animation: elegantFadeIn 0.5s cubic-bezier(0.16, 1, 0.3, 1); }
+@keyframes elegantFadeIn { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+
+.driver-popover-title {
+    font-size: 1.3rem;
+    color: var(--primary);
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    /* ✅ Police ajoutée ici pour garantir la cohérence */
+    font-family: 'Loyola Pro Bold', serif;
+}
+
+.driver-popover-description {
+    font-family: 'Playpen Sans', sans-serif;
+    font-size: 1rem;
+    line-height: 1.8;
+    color: var(--text-light);
+}
+
+.driver-popover-footer { display: flex; gap: 0.75rem; justify-content: flex-end; border-top: 1px solid var(--border-subtle); padding-top: 1.2rem; margin-top: 1.2rem; }
+.driver-popover-progress-text { color: var(--text-secondary); font-size: 0.9rem; }
+
+.driver-popover-prev-btn, .driver-popover-next-btn, .driver-popover-close-btn {
+    padding: 0.7rem 1.5rem;
+    border-radius: 0;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-size: 0.9rem;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+    /* ✅ LA CORRECTION PRINCIPALE EST ICI : On ajoute la police pour les boutons */
+    font-family: 'Loyola Pro Bold', serif; 
+}
+
+.driver-popover-next-btn { background: var(--accent); color: var(--dark); box-shadow: 0 4px 15px rgba(204, 137, 86, 0.4); }
+.driver-popover-next-btn:hover { background: var(--primary); transform: translateY(-2px); box-shadow: 0 6px 20px rgba(237, 193, 150, 0.5); }
+.driver-popover-prev-btn { background: transparent; color: var(--text-light); border: 1px solid var(--accent); }
+.driver-popover-prev-btn:hover { background: rgba(237, 193, 150, 0.1); border-color: var(--primary); }
+.driver-popover-close-btn { background: transparent; color: var(--text-light); opacity: 0.8; }
+.driver-popover-close-btn:hover { opacity: 1; color: var(--primary); }
+    ..welcome-screen {
+    position: absolute; /* ✅ CHANGÉ: de 'fixed' à 'absolute' */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; /* ✅ CHANGÉ: de 'min-height: 100vh' à 'height: 100%' */
+    background: linear-gradient(135deg, var(--dark) 0%, #0a0a0c 50%, var(--dark-secondary) 100%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    transition: opacity 1.2s ease, transform 1.2s ease;
+    overflow-y: auto; /* ✅ AJOUTÉ: Permet le scroll si le contenu est trop grand */
+    padding: 2rem 0; /* ✅ AJOUTÉ: Un peu d'espace en haut et en bas */
+}
     .welcome-screen.hidden { opacity: 0; pointer-events: none; transform: scale(1.1); }
     .welcome-content { text-align: center; max-width: 900px; padding: 2rem 1.5rem; animation: majestueuxSlideUp 1.4s cubic-bezier(0.16, 1, 0.3, 1) 0.3s backwards; position: relative; z-index: 2; }
     .welcome-logo { font-size: 6rem; margin-bottom: 3rem; filter: drop-shadow(0 20px 60px rgba(237, 193, 150, 0.5)) drop-shadow(0 0 30px rgba(204, 137, 86, 0.3)); animation: majestueuxFloat 5s ease-in-out infinite; position: relative; }
@@ -169,7 +217,19 @@
     /* =====================================================
        ÉCRAN DE CHARGEMENT - EFFET RIDEAUX ULTRA SMOOTH
        ===================================================== */
-    .loading-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100vh; background: transparent; z-index: 99999; display: none; justify-content: center; align-items: center; overflow: hidden; }
+    .loading-screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; /* ✅ CHANGÉ: de '100vh' à '100%' */
+    background: transparent;
+    z-index: 99999;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
     .loading-content { position: relative; z-index: 3; text-align: center; padding: 2rem; display: flex; flex-direction: column; align-items: center; justify-content: center; }
     .loading-phase-1, .loading-phase-2 { transition: opacity 0.5s ease-out, transform 0.5s ease-out; }
     .loading-phase-2 { display: none; opacity: 0; transform: translateY(20px); }
