--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🥩 Les Conseils du Boucher - Menu Sur-Mesure</title>
+    <title> Les Conseils du Boucher - Menu Sur-Mesure</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/metscarnes/bimi-metscarnes/main/Logo%20Mets%20Carn%C3%A9s%20HD.png">
 
     <script src="https://cdn.jsdelivr.net/npm/driver.js@latest/dist/driver.js.iife.js"></script>
@@ -1807,37 +1807,7 @@
     "quantite_par_personne": 200,
     "poids_unitaire_g": null
   },
-  {
-    "Produit": "Crépine",
-    "Categorie": "Agneau",
-    "Destination": "A griller, A rotir, A mijoter",
-    "NutriScore": "C",
-    "Energie": 900,
-    "Proteines": 0,
-    "Lipides": 100,
-    "Glucides": 0,
-    "Sel": 0,
-    "Fer": 0,
-    "Zinc": 0,
-    "Selenium": 0,
-    "VitamineB12": 0,
-    "Description": "La crépine, c’est la petite touche du boucher malin. Fine comme une dentelle, elle protège les farces et garde le jus pendant la cuisson. À la poêle ou au four, elle fond, se dore, parfume tout. C’est discret, mais sans elle, rien n’aurait ce goût-là. Le secret du moelleux, tout simplement.",
-    "CuissonConseillee": "À poêler 3 min par face ou mijoter 1 h selon la recette.",
-    "duree_totale_indicative_hh_mm_ss": "01:00:00",
-    "temperature_a_coeur_c": 69,
-    "Resume_sensoriel": "Chair moelleuse et enveloppée, goût riche et onctueux.",
-    "Texture": "Fondante",
-    "Tendrete": 8,
-    "Gout": 9,
-    "Jutosite": 8,
-    "Persillage": 7,
-    "product_url": "https://metscarnes.odoo.com/shop/crepine-245",
-    "image_url": "https://metscarnes.odoo.com/web/image/product.product/245/image_1920",
-    "unite": "poids",
-    "quantite_par_personne": 50,
-    "poids_unitaire_g": null
-  },
-  {
+    {
     "Produit": "Crépinettes de porc",
     "Categorie": "Porc",
     "Destination": "A griller",
